# libGPUMan

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
source/: CMakeLists.txt  gpu.cpp  gpu.hpp  main.cpp  partition.cpp  partition.hpp  process.cpp  process.hpp  utils.cpp  utils.hpp
